Fixes slider arrow sizing on mobile

--- a/public/src/scss/_slider.scss
+++ b/public/src/scss/_slider.scss
@@ -109,7 +109,7 @@
     }
 
     &__arrow {
-        font-size: 4em;
+        font-size: 4em !important;
         transform: scale(1.0) translate3d(0px, 0px, 0px);
         transition: transform 300ms ease;
     }
